--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "sindicato-crud",
+  "name": "template-system",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint src/** --ignore-pattern src/app/favicon.ico"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "js-cookie": "^3.0.5",
+    "mongoose": "^7.4.0",
+    "next": "13.4.11",
+    "next-auth": "^4.22.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
     "autoprefixer": "10.4.14",
-    "next": "13.4.11",
+    "eslint": "8.0.1",
+    "eslint-config-standard-with-typescript": "36.1.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-n": "15.0.0 || 16.0.0 ",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.33.0",
+    "eslint-plugin-tailwindcss": "3.13.0",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
