--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "eslint src/** --ignore-pattern src/app/favicon.ico"
   },
   "dependencies": {
+    "@prisma/client": "5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.5",
-    "mongoose": "^7.4.0",
     "next": "13.4.11",
-    "next-auth": "^4.22.3",
+    "next-auth": "^4.22.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
@@ -28,11 +29,12 @@
     "eslint": "8.0.1",
     "eslint-config-standard-with-typescript": "36.1.0",
     "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-n": "15.0.0 || 16.0.0 ",
+    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.33.0",
     "eslint-plugin-tailwindcss": "3.13.0",
     "postcss": "8.4.27",
+    "prisma": "^5.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
