--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "eslint src/** --ignore-pattern src/app/favicon.ico"
   },
   "dependencies": {
+    "@clerk/localizations": "^1.25.2",
+    "@clerk/nextjs": "^4.23.3",
     "@prisma/client": "5.0.0",
-    "@types/bcryptjs": "^2.4.2",
-    "axios": "^1.4.0",
+    "@supabase/auth-helpers-nextjs": "0.7.4",
+    "@supabase/supabase-js": "2.32.0",
+    "@types/bcryptjs": "^2.4.3",
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.5",
     "next": "13.4.11",
-    "next-auth": "^4.22.5",
+    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1"
@@ -29,12 +33,12 @@
     "eslint": "8.0.1",
     "eslint-config-standard-with-typescript": "36.1.0",
     "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-n": "^16.0.2",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.33.0",
     "eslint-plugin-tailwindcss": "3.13.0",
     "postcss": "8.4.27",
-    "prisma": "^5.1.1",
+    "prisma": "^5.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
