chore: :hammer: Chore: Update package.json Scripts and Modify Prisma Schema Provider
In this commit, changes are made to the project configuration:  A new command is added to the scripts in the "package.json" file, which could be useful for automating project-related tasks. The provider configuration is modified in the Prisma schema file.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src/** --ignore-pattern src/app/favicon.ico"
+    "lint": "eslint src/** --ignore-pattern src/app/favicon.ico",
+    "postinstall": "prisma db push"
   },
   "dependencies": {
     "@clerk/localizations": "^1.25.2",
